<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/tvUrl"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/url_placeholder"
        android:maxLines="1"
        android:ellipsize="end"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/tvInterval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/interval_placeholder"
        android:paddingEnd="8dp" />

    <ImageView
        android:id="@+id/btnDelete"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@android:drawable/ic_menu_delete"
        android:contentDescription="@string/cd_delete" />
    <ImageView
        android:id="@+id/btnRefresh"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/baseline_refresh_24"
        android:contentDescription="@string/cd_refresh" />
</LinearLayout>
